--- a/Pentomino/Pentomino.csproj
+++ b/Pentomino/Pentomino.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="OpenRegionFinder.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Piece.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
