--- a/Pentomino/Pentomino.csproj
+++ b/Pentomino/Pentomino.csproj
@@ -41,10 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="Location.cs" />
     <Compile Include="OpenRegionFinder.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Piece.cs" />
+    <Compile Include="Placement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shape.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
