--- a/Pentomino/Pentomino.csproj
+++ b/Pentomino/Pentomino.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="BoardPiece.cs" />
-    <Compile Include="Location.cs" />
+    <Compile Include="Pt.cs" />
     <Compile Include="OpenRegionFinder.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Piece.cs" />
